src/objects/Report_Builder_Configuration__c.object
<CustomObject>
    <description>Used to support individual report configurations so that ExAM reports can be saved for future use.</description>
    <fields>
        <fullName>Assessable_Object_Field_Position__c</fullName>
        <label>Assessable Object Field Position</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assessment_Data_Config__c</fullName>
        <label>Assessment Data Config</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assessment_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assessment Template</label>
        <referenceTo>Main_questionaire__c</referenceTo>
        <relationshipLabel>Report Builder Configurations</relationshipLabel>
        <relationshipName>Report_Builder_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assignment_Manager_position__c</fullName>
        <label>Assignment Manager position</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Choosed_Assignment_manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Choosed Assignment manager</label>
        <referenceTo>IssueRequest_Life_Cycle__c</referenceTo>
        <relationshipLabel>Report Builder Configurations</relationshipLabel>
        <relationshipName>Report_Builder_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date_Range__c</fullName>
        <label>End Date Range</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Temporary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Temporary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Output_Format__c</fullName>
        <label>Output Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PDF</fullName>
                </value>
                <value>
                    <fullName>HTML</fullName>
                </value>
                <value>
                    <fullName>JSON</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overall_Status__c</fullName>
        <label>Overall Status</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Selected_Sections__c</fullName>
        <label>Selected Sections</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date_Range__c</fullName>
        <label>Start Date Range</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Report Builder Configuration</label>
    <nameField>
        <label>Report Builder Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Report Builder Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>